  * start fimex-1.0.0
    * drop RFimex and perl modules
    * remove wdb support
    * better handling of CDM_STRING and CDM_CHAR
  * 2019-01-09 fimex-0.67.2
    * ignore GRIB stepType
    * fix some memory leaks when using xmlTextReader
    * bugfixes
  * 2018-12-07 fimex-0.67.1
    * bugfixes fiGrbmlCat
  * 2018-11-01 fimex-0.67.0
    * vertical interpolation to hybrid axis
    * bugfixes
  * 2018-02-05 fimex-0.66.0
    * python interface for a few more functions
    * if compiling commandline utility without version number, also
      omit the version number from shared libraries' name
    * bugfixes
  * 2017-10-26 fimex-0.65.0
    * round to nearest when converting floating point to integer
    * python interface for a few functions
    * allow extra test data (flth00.dat) to reside outside source directory
    * bugfixes
  * fimex-0.63.2 ... fimex-0.64.0
  * 2016-06-16 fimex-0.63.1
    * no code changes
    * bugfixes for parallel build
  * 2016-05-23 fimex-0.63
    * bugfixes:
      * CDMInterpolator->getDataSlice(slicebuilder)
      * problems with get_var_longitude/latitude in c_fimex (api change)
  * 2016-04-28 fimex-0.62.1
    * performance improvements:
      * implement CDMInterpolator->getDataSlice(slicebuilder)
      * vectorize mifi_nanf2bad
  * 2016-04-19 fimex-0.62
    * new high-level fortran90 fimex2d API
    * supporting grib-files > 2GB on 32bit platforms
    * enabling parallel grib reading when grib_api build with --enable-pthreads
    * parallelizing FillWriter/fillFile
    * lazy error-handling in FillWriter/fillFile, writing more data even when errors are found
    * supporting WRF-output without Times-axis
  * 2016-01-19 fimex-0.61.1
    * bugfix: extraction of unlimited dimension ignores all offsets
  * 2015-12-21 fimex-0.61
    * improved merge options
      * both inputs fully configurable
      * outer variables may be kept even when no inner exist
      * improved documentation with real world example