@@ -2,6 +2,7 @@
     * drop RFimex and perl modules
     * remove wdb support
     * better handling of CDM_STRING and CDM_CHAR
+    * CDM_CHAR and CDM_UCHAR strings expect numbers, not bytes (e.g. "15" gives 0xF, not '1')
   * 2019-01-09 fimex-0.67.2
     * ignore GRIB stepType
     * fix some memory leaks when using xmlTextReader
